# tmate

./: .gitignore  .travis.yml  Dockerfile  DockerfileCompile  Makefile.am  Makefile.static-build  README.md  arguments.c  build_static_release.sh  cfg.c  client.c  cmd-break-pane.c  cmd-join-pane.c  cmd-link-window.c  cmd-list-keys.c  cmd-move-window.c  cmd-new-session.c  cmd-queue.c  cmd-string.c  cmd-swap-pane.c  cmd-swap-window.c  cmd-unlink-window.c  cmd-wait-for.c  configure.ac  format.c  get-tmate.sh  input.c  log.c  options-table.c  package_release.sh  proc.c  resize.c  screen-redraw.c  server-client.c  server.c  session.c  signal.c  status.c  tmate-debug.c  tmate-decoder.c  (+18 more)
.github/: FUNDING.yml
.github/workflows/: DragonflyBSD.yml  FreeBSD.yml  MacOS.yml  NetBSD.yml  OpenBSD.yml  Ubuntu.yml
chart/: .helmignore  Chart.yaml  values.yaml
chart/templates/: NOTES.txt
compat/: b64_ntop.c  clock_gettime.c  fparseln.c  memcpy.c  setenv.c
config/: manifest.yaml
docker/: Dockerfile-tmate
libssh/: .gitignore  AUTHORS  CMakeLists.txt  COPYING  CPackConfig.cmake  CTestConfig.cmake  ChangeLog  CodingStyle  ConfigureChecks.cmake  DefineOptions.cmake  INSTALL  README  SubmittingPatches  config.h.cmake  libssh-build-tree-settings.cmake.in  libssh-config.cmake.in  libssh.pc.cmake  libssh_threads.pc.cmake
libssh/cmake/Modules/: AddCMockaTest.cmake  CheckCCompilerFlagSSP.cmake  DefineCMakeDefaults.cmake  DefineCompilerFlags.cmake  DefineInstallationPaths.cmake  FindArgp.cmake  FindCMocka.cmake  FindGCrypt.cmake  FindNSIS.cmake  FindNaCl.cmake  FindZLIB.cmake  UseDoxygen.cmake
libssh/doc/: CMakeLists.txt  Doxyfile.in  TracFooter.html  TracHeader.html  authentication.dox  command.dox  curve25519-sha256@libssh.org.txt  doxy.config.in  doxy.trac.in  forwarding.dox  guided_tour.dox  introduction.dox  linking.dox  mainpage.dox  scp.dox  sftp.dox  shell.dox  threading.dox
libssh/examples/: CMakeLists.txt  authentication.c  examples_common.h  exec.c  knownhosts.c  libssh_scp.c  sample.c  samplesftp.c  samplesshd-kbdint.c  samplesshd-tty.c  samplesshd.c  scp_download.c  senddata.c  ssh_server_fork.c  sshnetcat.c
libssh/include/: CMakeLists.txt
libssh/include/libssh/: CMakeLists.txt  agent.h  auth.h  bignum.h  bind.h  buffer.h  callbacks.h  channels.h  crc32.h  crypto.h  curve25519.h  dh.h  ecdh.h  ed25519.h  fe25519.h  kex.h  keys.h  knownhosts.h  legacy.h  libcrypto.h  libgcrypt.h  libssh.h  libsshpp.hpp  messages.h  misc.h  options.h  packet.h  pcap.h  pki.h  pki_priv.h  poll.h  priv.h  server.h  session.h  sftp.h  socket.h  ssh1.h  ssh2.h  threads.h  wrapper.h
libssh/src/: CMakeLists.txt  agent.c  auth.c  auth1.c  base64.c  bignum.c  bind.c  buffer.c  callbacks.c  channels.c  channels1.c  client.c  config.c  connect.c  crc32.c  curve25519.c  curve25519_ref.c  dh.c  ecdh.c  ed25519.c  error.c  fe25519.c  gcrypt_missing.c  ge25519.c  getpass.c  gssapi.c  gzip.c  init.c  kex.c  kex1.c  known_hosts.c  legacy.c  libcrypto.c  libgcrypt.c  log.c  match.c  messages.c  misc.c  options.c  packet.c  (+19 more)
libssh/src/threads/: CMakeLists.txt  pthread.c
libssh/tests/: CMakeLists.txt  cmdline.c  ctest-default.cmake  test_exec.c  test_ssh_bind_accept_fd.c  test_tunnel.c  torture.c  torture.h  valgrind.supp
libssh/tests/benchmarks/: CMakeLists.txt  bench_scp.c  bench_sftp.c
libssh/tests/client/: CMakeLists.txt  torture_algorithms.c  torture_auth.c  torture_connect.c  torture_forward.c  torture_knownhosts.c  torture_proxycommand.c  torture_request_env.c  torture_session.c  torture_sftp_dir.c  torture_sftp_read.c  torture_sftp_static.c
libssh/tests/pkd/: CMakeLists.txt  pkd_client.h  pkd_daemon.c  pkd_daemon.h  pkd_hello.c  pkd_keyutil.c  pkd_keyutil.h  pkd_util.c
libssh/tests/sftp_stress/: main.c
libssh/tests/unittests/: CMakeLists.txt  torture_buffer.c  torture_callbacks.c  torture_channel.c  torture_init.c  torture_isipaddr.c  torture_keyfiles.c  torture_list.c  torture_misc.c  torture_options.c  torture_pki.c  torture_rand.c
msgpack/: .gitignore  configure.in  preprocess
msgpack/src/: unpack.c
msgpack/src/msgpack/: unpack.hpp
msgpack/src/msgpack/type/: define.hpp.erb
